force-app/main/default/objects/QuoteLineItem/fields/BillingPeriodDurationOverride__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriodDurationOverride__c</fullName>
    <label>Billing Period Duration Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>