force-app/main/default/objects/QuoteLineItem/fields/DiscountProduct__c.field-meta.xml
<CustomField>
    <fullName>DiscountProduct__c</fullName>
    <formula>CONTAINS(Product2.Model__c, &quot;Discount&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Product</label>
    <type>Checkbox</type>
</CustomField>