force-app/main/default/objects/QuoteLineItem/fields/Licensed_Device_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Device_Quantity__c</fullName>
    <formula>Quantity * Product2.LicensedDevices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensed Device Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>