force-app/main/default/objects/QuoteLineItem/fields/NonDiscountPriceBundle__c.field-meta.xml
<CustomField>
    <fullName>NonDiscountPriceBundle__c</fullName>
    <formula>IF(
NOT(ISBLANK( ProductBundle__c ))
&amp;&amp;
Quantity &gt; 0
&amp;&amp;
NOT( DiscountProduct__c ),
UnitPrice * Quantity ,
0)</formula>
    <label>Non-Discount Price for Bundle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>