force-app/main/default/objects/QuoteLineItem/fields/NonDiscountUnitPriceBundle__c.field-meta.xml
<CustomField>
    <fullName>NonDiscountUnitPriceBundle__c</fullName>
    <formula>IF(
NOT(ISBLANK( ProductBundle__c ))
&amp;&amp;
Quantity &gt; 0
&amp;&amp;
NOT( DiscountProduct__c ),
UnitPrice ,
0)</formula>
    <label>Non-Discount Unit Price for Bundle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>