force-app/main/default/objects/QuoteLineItem/fields/ProductBundle__c.field-meta.xml
<CustomField>
    <fullName>ProductBundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Bundle</label>
    <referenceTo>ProductBundle__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>